# Obsidian-Trading-Balance-Fetcher

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  release-hygiene.yml  release.yml
balancefetcher/: .env.example  README.md  requirements.txt  start.py
docs/decisions/: 2025-08-09-cache-locking.md  2025-08-09-frontmatter.md  2025-08-09-linting.md  2025-08-16-docker-support.md
scripts/: agents-verify.sh  generate_release_notes.py
tests/: test_start.py
